@@ -22,6 +22,7 @@ CLEANUP:
 
 
 DONE:
+6/3/08 - create TestBeakerView prototype for "beaker view" of H3O and OH concentrations in variable liquid volume
 ******* version 0.00.03 (21915)
 6/2/08 - TestMicroscopeView: fix distribution of particles in circle, previous versions denser towards enter (missing sqrt)
 6/2/08 - TestMicroscopeView: set default particle size to 4
@@ -29,7 +30,7 @@ DONE:
 ******* version 0.00.02 (21898)
 6/1/08 - TestMicroscopeView: add color controls
 ******* version 0.00.01 (21895)
-5/31/08 - wrote TestMicroscopeView prototype for "microscope view" of H30 and OH concentrations
+5/31/08 - create TestMicroscopeView prototype for "microscope view" of H3O and OH concentrations
 5/20/08 - set up simulation skeleton, check in to SVN
 
 REJECTED:
